--- a/AcsistsProject/package.json
+++ b/AcsistsProject/package.json
@@ -13,7 +13,9 @@
     "antd": "^5.17.4",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
+    "moment": "^2.30.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
