--- a/AcsistsProject/package.json
+++ b/AcsistsProject/package.json
@@ -23,6 +23,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
     "sweetalert2": "^11.11.0",
+    "swiper": "^11.1.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
