--- a/AcsistsProject/package.json
+++ b/AcsistsProject/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "antd": "^5.17.4",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
@@ -27,6 +29,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
